gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-ffi_pure.rs
#![crate_type = "lib"]

extern "C" {
    #[ffi_pure] // { dg-error ".E0658." "" { target *-*-* } }
    pub fn foo();
}

